--- a/InventorySystemForiPhone/ViewController/MainPage/View/ISMainPageHeaderView.xib
+++ b/InventorySystemForiPhone/ViewController/MainPage/View/ISMainPageHeaderView.xib
@@ -8,8 +8,10 @@
         <mutableArray key="Lantinghei_0.ttf">
             <string>FZLTXHK--GBK1-0</string>
             <string>FZLTXHK--GBK1-0</string>
-            <string>FZLTXHK--GBK1-0</string>
-            <string>FZLTXHK--GBK1-0</string>
+        </mutableArray>
+        <mutableArray key="Lantinghei_1.ttf">
+            <string>FZLTHJW--GB1-0</string>
+            <string>FZLTHJW--GB1-0</string>
         </mutableArray>
     </customFonts>
     <objects>
@@ -20,14 +22,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tB8-r9-PC3">
-                    <rect key="frame" x="71" y="7" width="33" height="16"/>
-                    <fontDescription key="fontDescription" type="italicSystem" pointSize="13"/>
+                    <rect key="frame" x="71" y="7" width="35" height="17"/>
+                    <fontDescription key="fontDescription" type="italicSystem" pointSize="14"/>
                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dZj-yp-YUZ">
-                    <rect key="frame" x="71.5" y="26.5" width="34.5" height="18.5"/>
-                    <fontDescription key="fontDescription" name="FZLTXHK--GBK1-0" family="Lantinghei SC" pointSize="13"/>
+                    <rect key="frame" x="71" y="28" width="35" height="15"/>
+                    <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="13"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -38,7 +40,7 @@
                         <constraint firstAttribute="width" constant="80" id="AJ7-KN-GCj"/>
                         <constraint firstAttribute="height" constant="50" id="hCz-AH-bE1"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="FZLTXHK--GBK1-0" family="Lantinghei SC" pointSize="13"/>
+                    <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="13"/>
                     <state key="normal" title="查看期限">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
