--- a/InventorySystemForiPhone/ViewController/SaleOrder/View/ISOrderHeaderView.xib
+++ b/InventorySystemForiPhone/ViewController/SaleOrder/View/ISOrderHeaderView.xib
@@ -5,10 +5,8 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <customFonts key="customFonts">
-        <mutableArray key="Lantinghei_0.ttf">
-            <string>FZLTXHK--GBK1-0</string>
-        </mutableArray>
         <mutableArray key="Lantinghei_1.ttf">
+            <string>FZLTHJW--GB1-0</string>
             <string>FZLTHJW--GB1-0</string>
             <string>FZLTHJW--GB1-0</string>
         </mutableArray>
@@ -38,11 +36,12 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oX2-Ml-doL">
-                    <rect key="frame" x="58" y="33" width="252" height="19"/>
-                    <fontDescription key="fontDescription" name="FZLTXHK--GBK1-0" family="Lantinghei SC" pointSize="13"/>
-                    <state key="normal" image="order_edit_icon">
+                    <rect key="frame" x="58" y="28" width="252" height="29"/>
+                    <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="14"/>
+                    <state key="normal">
                         <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <state key="selected" image="order_edit_icon"/>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
